    would crash. This is now fixed.

  * Add support for copying a selection of muxes from one DVB adapter to
    another in the web UI.

  * Support for DVB-S2 has been added

  * Default character encoding in DVB is ISO6937, not Latin-1. Ticket #96

  * Add support for DiSEqC 1.1 / 2.1, configured on per-adapter basis.
    Ticket #99

hts-tvheadend (2.5) hts; urgency=low

  * If a previosly detected DVB adapter was not present during startup,
    Tvheadend would crash. This is now fixed.

  * If XMLTV grabbing was disabled tvheadend would spin in a 100% CPU loop.
    This is now fixed.

  * The HTSP service is now announced via AVAHI (mDNS service discovery)

  * Support for IPTV has been added. Only RAW TS in UDP is supported 
    at the moment.

  * Add support for setting default extra times to add before and after
    a recording. Useful if your TV shows never start on time.

  * Use FFmpeg's av_interleaved_write_frame() or some players can't
    play the recorded content (vlc is one)

 -- Andreas Öman <andreas@lonelycoder.com>  Wed, 19 Aug 2009 22:28:02 +0200

hts-tvheadend (2.4) hts; urgency=low

  * Due to a bug, the polarisation of DVB-S muxes was not correctly
    stored internally. This has now been fixed.

  * Fix compilation on 64bit systems

  * Make sure channel <> service mappings are saved when edited from
    DVB service grid

  * Add support for merging one channel into another. 
    Useful if you have multiple providers offering the same DVB service
    but with different names.

  * The embedded HTTP server now logs failed requests

  * Use absolute paths when serving static content (the web app itself)
    This was only a problem when fork()ing a development build

  * Rework the CWC reconnection strategy.
    If there are active subscription, Tvheadend will attempt to reconnect
    immediately and then retry every three seconds.
    If no subscription is active a reconnection attempt is performed
    every minute.